Added gcp to ssh config

--- a/ssh/config
+++ b/ssh/config
@@ -1,5 +1,8 @@
- Host data.cs.purdue.edu
- 	User smangiap
+Host scottmangiapane.com
+	User gcp
 
- Host rpi.scottmangiapane.com
- 	User rpi
+Host rpi.scottmangiapane.com
+	User rpi
+
+Host data.cs.purdue.edu
+	User smangiap
